<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.luxurytravel.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/airplane_background"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/Agency_Name_Text"
        android:layout_marginTop="30dp"
        android:text="@string/Company_Title"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Agency_Name_Text"
        android:id="@+id/Agency_Name_Solgan"
        android:layout_marginTop="10dp"
        android:text="@string/Solgan"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/Agency_Name_Solgan"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contact_us"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Phone_Number"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Email"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Address"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Service_Hours"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Web_Site"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
